compiler/testData/diagnostics/testsWithStdLib/annotations/annotationApplicability/jvmMultifileClassWithoutJvmName.kt
<!JVM_MULTIFILE_CLASS_WITHOUT_JVM_NAME!>@file:JvmMultifileClass<!>
package test